# thinllm

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
docs/: LLM_CONFIG_RESEARCH.md  agent.md
examples/: README.md  agent_example.py  anthropic_cache_example.py  anthropic_interleaved_thinking_example.py  anthropic_vision_example.py  azure_openai_example.py  bedrock_example.py  gemini_example.py  new_config_demo.py  streamlit_agent_chat.py  streamlit_streaming_chat.py  streamlit_utils.py
src/thinllm/: __init__.py  agent.py  compat.py  config.py  core.py  messages.py  tools.py  utils.py
src/thinllm/providers/anthropic/: __init__.py  core.py  deserializers.py  serializers.py  streaming.py
src/thinllm/providers/gemini/: __init__.py  core.py  deserializers.py  serializers.py  streaming.py
src/thinllm/providers/openai/: core.py  deserializers.py  serializers.py  streaming.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent.py  test_llm.py
tests/unit/: __init__.py  test_agent.py  test_config.py
tests/unit/anthropic/: __init__.py  test_serializers.py
tests/unit/gemini/: __init__.py  test_serializers.py
tests/unit/openai/: __init__.py  test_serializers.py
